--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -7,17 +7,31 @@
 }
 
 body {
+    font-family: Arial, sans-serif;
     background-color: #f5f5f5;
-    font-family: var(--body-font);
 }
 
 :root {
     --body-font: 'Gowun Dodum', sans-serif;
 }
 
-.chat-content {
-    height: 80%;
+.chat-window {
+    width: 550px;
+    margin: 30px auto;
+    background-color: #fff;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.chat_content {
+    height: 450px;
     overflow-y: scroll;
+    padding: 20px;
 }
 
 .line {
@@ -29,46 +43,57 @@ body {
     padding: 10px;
     max-width: 200px;
     margin: 10px;
-    font-size: 20px;
+    font-size: 15px;
     border-radius: 7px;
     word-wrap: break-word;
 }
 
 .mine {
-    background: #fff;
+    background: #eee;
     padding: 10px;
     max-width: 200px;
     margin: 10px;
-    font-size: 20px;
+    font-size: 15px;
     border-radius: 7px;
     word-wrap: break-word;
     margin-left: auto;
 }
 
-.input_area {
-    text-align: center;
-    margin-top: 10px;
+.chat-input {
+    padding: 20px;
+    display: inline-block;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    position: relative;
+    width: 100%;
+
 }
 
-#input {
-    padding: 8px;
-    width: 40%;
-    height: auto;
-    font-size: 20px;
+.chat-input input[type="text"] {
+    width: 85%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    outline: none;
+    margin-right: 9px;
     font-family: var(--body-font);
 }
 
-#send {
+.chat-input button[type="submit"] {
     background-color: #0275d8;
     border: none;
-    border-radius: 7px;
+    border-radius: 4px;
     color: #fff;
     padding: 10px 15px;
-    font-size: 19px;
+    font-size: 16px;
     cursor: pointer;
+    /*transition: background-color 0.2s ease-in-out;*/
     font-family: var(--body-font);
 }
 
-#sned:hover {
+.chat-input button[type="submit"]:hover {
     background-color: #01447e;
 }
