--- a/src/main/resources/templates/chatCompletion.html
+++ b/src/main/resources/templates/chatCompletion.html
@@ -10,47 +10,64 @@
     <title>Chatting</title>
   </head>
   <body>
-    <div class="header">
-      <div class="logo">
-        <a href="/"><img src="images/logo.png"><label>eduG</label></a>
-      </div>
-      <div class="header-menu">
-        <a sec:authorize="isAnonymous()" href="/auth/login">로그인</a>
-        <a sec:authorize="isAnonymous()" href="/auth/signup">회원가입</a>
-        <a sec:authorize="isAuthenticated()" href="/logout">로그아웃</a>
-        <a sec:authorize="isAuthenticated()" href="/">Q&A</a>
-        <a sec:authorize="isAuthenticated()" href="/chat">Chat</a>
-      </div>
-      <div class="user-settings">
-        <div class="dark-light">
-          <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path></svg>
+<!--    <div class="main_area">-->
+      <div class="header">
+        <div class="logo">
+          <a href="/"><img src="images/logo.png"><label>eduG</label></a>
         </div>
-        <div class="user-menu">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-square">
-            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
+        <div class="header-menu">
+          <a sec:authorize="isAnonymous()" href="/auth/login">로그인</a>
+          <a sec:authorize="isAnonymous()" href="/auth/signup">회원가입</a>
+          <a sec:authorize="isAuthenticated()" href="/logout">로그아웃</a>
+          <a sec:authorize="isAuthenticated()" href="/">Q&A</a>
+          <a sec:authorize="isAuthenticated()" href="/chat">Chat</a>
         </div>
-        <div class="user-name">
-          <label sec:authorize="isAuthenticated()" sec:authentication="name"></label>
-          <label sec:authorize="isAnonymous()">비로그인 유저</label>
+        <div class="user-settings">
+          <div class="dark-light">
+            <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path></svg>
+          </div>
+          <div class="user-menu">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-square">
+              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
+          </div>
+          <div class="user-name">
+            <label sec:authorize="isAuthenticated()" sec:authentication="name"></label>
+            <label sec:authorize="isAnonymous()">비로그인 유저</label>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class ="chat-content">
-      <div class="line">
-        <span class="chat-box">안녕?</span>
+      <div class="chat-window">
+        <div class="chat_content">
+          <div class="line">
+            <span class="chat-box">안녕?</span>
+          </div>
+          <div class="line">
+            <span class="chat-box mine">안녕!</span>
+          </div>
+        </div>
+        <div class="chat-input">
+          <input type="text" placeholder="채팅을 입력하세요">
+          <button type="submit">전송</button>
+        </div>
       </div>
-      <div class="line">
-        <span class=" mine">안녕!</span>
-      </div>
-    </div>
 
-    <div class="input_area">
-      <input id="input" type="text" placeholder="채팅을 입력하세요">
-      <button id="send">전송</button>
-    </div>
+<!--      <div class ="chat-content">-->
+<!--        <div class="line">-->
+<!--          <span class="chat-box">안녕?</span>-->
+<!--        </div>-->
+<!--        <div class="line">-->
+<!--          <span class=" mine">안녕!</span>-->
+<!--        </div>-->
+<!--      </div>-->
 
+<!--      <div class="input_area">-->
+<!--        <input id="input" type="text" placeholder="채팅을 입력하세요">-->
+<!--        <button id="send">전송</button>-->
+<!--      </div>-->
+
+<!--    </div>-->
   <script src="js/chat.js"></script>
   </body>
 </html>
